# backend/src/router/routes.ts
@@ -202,6 +202,54 @@ export function RegisterRoutes(router: KoaRouter) {
             return promiseHandler(controller, promise, context, undefined, undefined);
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        router.get('/api/backup',
+            ...(fetchMiddlewares<Middleware>(MemoController)),
+            ...(fetchMiddlewares<Middleware>(MemoController.prototype.listBackups)),
+
+            async function MemoController_listBackups(context: any, next: any) {
+            const args = {
+                    token: {"in":"header","name":"authorization","required":true,"dataType":"string"},
+            };
+
+            let validatedArgs: any[] = [];
+            try {
+              validatedArgs = getValidatedArgs(args, context, next);
+            } catch (err) {
+              const error = err as any;
+              context.status = error.status;
+              context.throw(error.status, JSON.stringify({ fields: error.fields }));
+            }
+
+            const controller = new MemoController();
+
+            const promise = controller.listBackups.apply(controller, validatedArgs as any);
+            return promiseHandler(controller, promise, context, undefined, undefined);
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        router.post('/api/backup',
+            ...(fetchMiddlewares<Middleware>(MemoController)),
+            ...(fetchMiddlewares<Middleware>(MemoController.prototype.backupMemo)),
+
+            async function MemoController_backupMemo(context: any, next: any) {
+            const args = {
+                    token: {"in":"header","name":"authorization","required":true,"dataType":"string"},
+            };
+
+            let validatedArgs: any[] = [];
+            try {
+              validatedArgs = getValidatedArgs(args, context, next);
+            } catch (err) {
+              const error = err as any;
+              context.status = error.status;
+              context.throw(error.status, JSON.stringify({ fields: error.fields }));
+            }
+
+            const controller = new MemoController();
+
+            const promise = controller.backupMemo.apply(controller, validatedArgs as any);
+            return promiseHandler(controller, promise, context, undefined, undefined);
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
 
   // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
